some look-&-feel fixes
line up social media icons and name in edit and view mode
change “Short Bio” to “About me”
move “About me” section out of banner in mobile
fix some indentation issues and extra spacing

--- a/src/css/profile/about.less
+++ b/src/css/profile/about.less
@@ -1,69 +1,76 @@
 /* Styles for the about section, shared across main profile view & edit profile view */
-.about {
-	.section-header {
-		.proxima-nova-bold;
-		font-size: 18px;
-		line-height: 2;
-		color: @light-gray;
-		margin-top: @std-padding*2;
+.profile .about, .editProfile .about {
+  .section-header {
+    .proxima-nova-bold;
+    font-size: 18px;
+    line-height: 2;
+    color: @light-gray;
+    margin-top: @std-padding*2;
 
-		&:first-child {
-			margin-top: 0px;
-		}
-
-		.helper-text {
-			.proxima-nova-regular;
-			font-size: 16px;
-		}
-	}
-
-	.list-entry {
-		.seed-body-text;
-		font-weight: 500;
-	}
-
-	input[type="text"] {
-      .borderless-text-input;
-      width: 100%;
-      margin-bottom: @std-padding;
-      border-bottom: 1px solid @border-light;
-      line-height: 28px;
+    @media (max-width: @screen-xs-max) {
+      &.mobile-first {
+        margin-top: 0px;
+      }
     }
-
-    ul {
-      padding-left: 0;
-      margin-bottom: @std-padding;
-    }
-
-    li {
-      list-style-type: none;
-      position: relative;
-      padding: 5px 0;
-      color: @default-text;
-      .close {
-      	color: @readable-text;
-        @media (min-width: @screen-sm) {
-          position: absolute;
-          top: 4px;
-          left: -20px;
-        }
+    @media (min-width: @screen-sm) {
+      &.desktop-first {
+        margin-top: 0px;
       }
     }
 
-    textarea, li {
-    	.proxima-nova-regular;
-    	font-size: 14px;
-    	color: @readable-text;
+    .helper-text {
+      .proxima-nova-regular;
+      font-size: 16px;
     }
+  }
 
-    //Style placeholder text (cross browser compatible)
-    .placeholder-attributes() {
-    	color: @nonactive-text;
-    	font-style: italic;
-    	font-size: 14px;
+  .list-entry {
+    .seed-body-text;
+    font-weight: 500;
+  }
+
+  input[type="text"] {
+    .borderless-text-input;
+    width: 100%;
+    margin-bottom: @std-padding;
+    border-bottom: 1px solid @border-light;
+    line-height: 28px;
+  }
+
+  ul {
+    padding-left: 0;
+    margin-bottom: @std-padding;
+  }
+
+  li {
+    list-style-type: none;
+    position: relative;
+    padding: 5px 0;
+    color: @default-text;
+    .close {
+      color: @readable-text;
+      @media (min-width: @screen-sm) {
+        position: absolute;
+        top: 4px;
+        left: -20px;
+      }
     }
-    ::-webkit-input-placeholder { .placeholder-attributes;}
-	:-moz-placeholder { .placeholder-attributes;}
-	::-moz-placeholder { .placeholder-attributes;}
-	:-ms-input-placeholder { .placeholder-attributes;}
+  }
+
+  textarea, li {
+    .proxima-nova-regular;
+    font-size: 14px;
+    color: @readable-text;
+  }
+
+  //Style placeholder text (cross browser compatible)
+  .placeholder-attributes() {
+    color: @nonactive-text;
+    font-style: italic;
+    font-size: 14px;
+  }
+  ::-webkit-input-placeholder { .placeholder-attributes;}
+  :-moz-placeholder { .placeholder-attributes;}
+  ::-moz-placeholder { .placeholder-attributes;}
+  :-ms-input-placeholder { .placeholder-attributes;}
 }
