--- a/src/css/profile/profile-only.less
+++ b/src/css/profile/profile-only.less
@@ -13,31 +13,31 @@
       }
     }
 
-      .info-column {
-        @media (max-width: @screen-xs-max) {
+    .info-column {
+      @media (max-width: @screen-xs-max) {
+        margin: 0;
+
+        .name {
           margin: 0;
-
-          .name {
-            margin: 0;
-          }
         }
+      }
 
-        .social-media {
-          a {
-            margin: 0 1px;
-          }
-          i {
-            @media (min-width: @screen-sm) {
-              margin-left: @std-padding/4;
-              margin-right: @std-padding/4;
+      .social-media {
+        a {
+          margin: 0 1px;
+        }
+        i {
+          @media (min-width: @screen-sm) {
+            margin-left: @std-padding/4;
+            margin-right: @std-padding/4;
 
-              &:first-child {
-                margin-left: @std-padding;
-              }
+            &:first-child {
+              margin-left: @std-padding;
             }
           }
         }
       }
+    }
 
     .send-message i {
       &, &:hover {color: white;}
@@ -60,7 +60,7 @@
 
     @media (min-width: @screen-sm) {
       padding-top: @std-padding*2;
-      padding-left: @std-padding*3;
+      padding-left: @std-padding*2;
       border-left: 1px solid @default-border;
     }
 
